# nexus

./: .clang-format  .clang-format-dirs  .clang-tidy  .config  .editorconfig  .gitignore  .gitmodules  BUILD_VERIFICATION.md  CHANGELOG.md  CHANGELOG_CN.md  CHECKPOINT_20_SUMMARY.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CONTRIBUTING_CN.md  CTestConfig.cmake  CTestScript.cmake  Doxyfile  FINAL_VERIFICATION_REPORT.md  Kconfig  LICENSE  README.md  README_CN.md  codecov.yml  nexus_config.h  pytest.ini  requirements.txt  setup.py  test_results_static_registry.xml
applications/: CMakeLists.txt
applications/blinky/: CMakeLists.txt  main.c
applications/config_demo/: CMakeLists.txt  main.c
applications/freertos_demo/: CMakeLists.txt  main.c
applications/shell_demo/: CMakeLists.txt  main.c
framework/: CMakeLists.txt
framework/config/: CMakeLists.txt  README.md
framework/init/: CMakeLists.txt  README.md
framework/log/: CMakeLists.txt  README.md
framework/shell/: CMakeLists.txt  README.md
hal/: CMakeLists.txt  Kconfig
hal/docs/: CHANGELOG.md  DESIGN.md  PORTING_GUIDE.md  README.md  TEST_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
hal/src/: hal_common.c  nx_adapter.c  nx_assert.c  nx_device.c  nx_device_registry.c  nx_error.c  nx_hal.c  nx_mem.c  nx_mutex.c  nx_power_manager.c  nx_status.c
osal/: CMakeLists.txt  Kconfig
osal/docs/: CHANGELOG.md  DESIGN.md  PORTING_GUIDE.md  README.md  TEST_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
tests/: CMakeLists.txt  README.md  conftest.py  test_main.cpp  test_main_common.cpp
tests/config/: CMakeLists.txt  README.md  TEST_FINAL_REPORT.md  TEST_IMPLEMENTATION_STATUS.md  TEST_REPORT_TEMPLATE.md  run_tests.bat  run_tests.sh  test_config_backend.cpp  test_config_backend_properties.cpp  test_config_callback.cpp  test_config_callback_properties.cpp  test_config_core_properties.cpp  test_config_crypto.cpp  test_config_crypto_properties.cpp  test_config_default.cpp  test_config_default_properties.cpp  test_config_helpers.h  test_config_import_export.cpp  test_config_import_export_properties.cpp  test_config_integration.cpp  test_config_namespace.cpp  test_config_namespace_properties.cpp  test_config_performance.cpp  test_config_query.cpp  test_config_store.cpp  test_config_store_properties.cpp  test_config_thread_safety.cpp
tests/hal/: CMakeLists.txt  test_build_system.cpp  test_checkpoint_verification.cpp  test_compiler_abstraction.cpp  test_hal_adc.cpp  test_hal_adc_properties.cpp  test_hal_error_handling_properties.cpp  test_hal_gpio.cpp  test_hal_gpio_properties.cpp  test_hal_i2c.cpp  test_hal_i2c_properties.cpp  test_hal_spi.cpp  test_hal_spi_properties.cpp  test_hal_system_properties.cpp  test_hal_timer.cpp  test_hal_timer_properties.cpp  test_hal_uart.cpp  test_hal_uart_properties.cpp  test_nx_adc.cpp  test_nx_crc.cpp  test_nx_crc_properties.cpp  test_nx_device.cpp  test_nx_device_registry.cpp  test_nx_device_registry_properties.cpp  test_nx_factory.cpp  test_nx_flash.cpp  test_nx_flash_properties.cpp  test_nx_gpio.cpp  test_nx_hal.cpp  test_nx_i2c.cpp  test_nx_integration.cpp  test_nx_option_bytes.cpp  test_nx_option_bytes_properties.cpp  test_nx_rtc.cpp  test_nx_rtc_properties.cpp  test_nx_sdio.cpp  test_nx_sdio_properties.cpp  test_nx_spi.cpp  test_nx_status.cpp  test_nx_timer.cpp  (+6 more)
tests/init/: CMakeLists.txt  README.md  TEST_FINAL_REPORT.md  TEST_IMPLEMENTATION_STATUS.md  TEST_REPORT_TEMPLATE.md  run_tests.bat  run_tests.sh  test_init_helpers.cpp  test_init_helpers.h  test_init_integration.cpp  test_init_performance.cpp  test_nx_firmware_info.cpp  test_nx_init.cpp  test_nx_init_properties.cpp  test_nx_startup.cpp
tests/integration/: CMakeLists.txt  test_config_integration.cpp  test_freertos_adapter_integration.cpp  test_hal_osal_integration.cpp  test_log_integration.cpp  test_shell_integration.cpp
tests/kconfig/: test_buffer_config_properties.py  test_build_system_dependency_properties.py  test_chip_hierarchy_properties.py  test_circular_dependency_detection.py  test_cli_integration.py  test_config_generation_properties.py  test_config_roundtrip_properties.py  test_data_model_properties.py  test_default_config_properties.py  test_default_range_consistency_properties.py  test_dependency_constraints_properties.py  test_dependency_transitivity_properties.py  test_generator_file_properties.py  test_generator_instance_properties.py  test_kconfig_inclusion_properties.py  test_namespace_consistency_properties.py  test_naming_rules_instance_properties.py  test_naming_rules_platform_properties.py  test_naming_rules_validation.py  test_osal_backend_properties.py  test_osal_config_visibility_properties.py  test_peripheral_config_properties.py  test_peripheral_naming_properties.py  test_platform_config_isolation_properties.py  test_platform_defaults_properties.py  test_platform_selection_properties.py  test_range_constraint_properties.py  test_templates.py  test_transfer_mode_properties.py  test_undefined_symbol_detection.py  test_validator_naming_properties.py  test_validator_report.py  test_validator_structure_properties.py
tests/log/: CMakeLists.txt  README.md  TEST_REPORT_TEMPLATE.md  run_tests.bat  run_tests.sh  test_log.cpp  test_log_helpers.h  test_log_integration.cpp  test_log_performance.cpp  test_log_properties.cpp  test_log_thread_safety.cpp  test_log_uart_backend.cpp
tests/osal/: CMakeLists.txt  test_osal_core_properties.cpp  test_osal_diag_properties.cpp  test_osal_error_handling_properties.cpp  test_osal_event.cpp  test_osal_event_properties.cpp  test_osal_handle_validation_properties.cpp  test_osal_mem.cpp  test_osal_mem_properties.cpp  test_osal_mutex.cpp  test_osal_mutex_properties.cpp  test_osal_queue.cpp  test_osal_queue_properties.cpp  test_osal_sem.cpp  test_osal_sem_properties.cpp  test_osal_task.cpp  test_osal_task_properties.cpp  test_osal_timer.cpp  test_osal_timer_properties.cpp
tests/script_validation/: __init__.py  test_automation_pipeline_properties.py  test_cli.py  test_cross_platform_consistency_properties.py  test_error_handling_properties.py  test_integration.py  (+7 more)
(+781 files in other folders)
