##############################################################################
# Framework Layer
##############################################################################

# Log framework
add_subdirectory(log)

# Shell framework
add_subdirectory(shell)

# Future framework components:
# add_subdirectory(event)
# add_subdirectory(state_machine)
# add_subdirectory(config)
