##############################################################################
# Framework Layer
##############################################################################

# Log framework
add_subdirectory(log)

# Shell framework
add_subdirectory(shell)

# Config Manager framework
add_subdirectory(config)

# Init framework
add_subdirectory(init)

# Future framework components:
# add_subdirectory(event)
# add_subdirectory(state_machine)
